--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -8,7 +8,7 @@ inputs:
 
 outputs:
 
-  linux_containers_matrix: '{"terraform_version": "${{ toJSON(steps.terraform.outputs.versions) }}", "images": "${{ toJSON(steps.images.outputs.images) }}" }'
+  linux_containers_matrix: '{"terraform_version": ${{ steps.terraform.outputs.versions }}, "images": ${{ steps.images.outputs.images }} }'
 
   terraform_versions:
     description: "The versions of Terraform to test with."
