--- a/linux-containers/action.yml
+++ b/linux-containers/action.yml
@@ -15,6 +15,10 @@ runs:
 
   steps:
 
+    - name: Echo job
+      shell: sh
+      run: echo '${{ toJSON(job) }}'
+
     - name: Install Terraform (Alpine)
       if: startsWith(job.container.image, 'alpine:')
       shell: sh
