--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -8,39 +8,34 @@ inputs:
 
 outputs:
 
-  linux_containers_matrix: 
-    description: "The JSON-encoded matrix to use for the Linux containers tests."
-    value: '{"fail-fast": false, "matrix": {"image": ${{ steps.images.outputs.images }}, "terraform_version": ${{ steps.terraform.outputs.versions }}, "runs-on": ["ubuntu-latest"], "exclude": ${{ steps.exclude.outputs.exclude }} }}'
-
-  linux_shells_matrix: 
-    description: "The JSON-encoded matrix to use for the Linux shells tests."
-    value: '{"fail-fast": false, "matrix": {"terraform_version": ${{ steps.terraform.outputs.versions }}, "runs-on": ["ubuntu-latest"] }}'
-
-  non_linux_matrix: 
-    description: "The JSON-encoded matrix to use for non-Linux tests."
-    value: '{"fail-fast": false, "matrix": {"runs-on": ${{ steps.non-linux.outputs.names }}, "terraform_version": ${{ steps.terraform.outputs.versions }} }}'
-
+  strategy: 
+    description: "The JSON-encoded strategy to use for the testing jobs."
+    value: ${{ steps.matrix.outputs.matrix }}
 
 runs:
   using: 'composite'
 
   steps:
 
+    # Get the list of Linux images that we want to test on
     - name: Get Images
       id: images
       shell: bash
       run: echo ::set-output name=images::'["alpine:latest", "redhat/ubi9:latest", "fedora:latest", "centos:latest", "ubuntu:latest", "amazonlinux:1", "amazonlinux:2"]'
 
+    # Get the list of Windows operating systems to test on
     - name: Get Windows Operating Systems
       id: windows
       shell: bash
       run: echo ::set-output name=names::'["windows-2022", "windows-2019", "windows-2016"]'
 
+    # Get the list of MacOS operating systems to test on
     - name: Get MacOS Operating Systems
       id: macos
       shell: bash
       run: echo ::set-output name=names::'["mac-12", "mac-11", "mac-10.15"]'
 
+    # Merge the Windows and MacOS operating system lists together
     - name: Get Non-Linux Operating Systems
       id: non-linux
       shell: bash
@@ -83,27 +78,46 @@ runs:
 
     # Generate excluded container configurations.
     # amazonlinux doesn't support anything below TF v0.13.x
-    - name: Generate Excluded Container Configurations
-      id: exclude
+    - name: Generate Matrix
+      id: matrix
       shell: bash
       run: |
         set -eu -o pipefail
 
-        images=("amazonlinux:1" "amazonlinux:2")
+        windows_versions='${{ steps.windows.outputs.versions }}'
+        macos_versions='${{ steps.mac.outputs.versions }}'
+        images='${{ steps.images.outputs.images }}'
         tf_versions='${{ steps.terraform.outputs.versions }}'
-        excluded=()
 
-        for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-            major=$(echo $version | cut -d. -f1)
-            minor=$(echo $version | cut -d. -f2)
-            patch=$(echo $version | cut -d. -f3)
+        matrix=()
 
-            if [ $major -eq 0 ] && [ $minor -le 13 ]; then
-                for image in "${images[@]}"; do
-                    excluded+=("{\"image\": \"$image\", \"terraform_version\": \"$version\"}")
-                done
-            fi
+        # Start with the Linux containers
+        for image in $(echo "${images}" | jq -r '.[]'); do
+            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+                major=$(echo $version | cut -d. -f1)
+                minor=$(echo $version | cut -d. -f2)
+                # Exclude Amazon Linux 1/2 with any version less than 13
+                if ! ( [ $major -eq 0 ] && [ $minor -lt 13 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
+                    matrix+=("{\"container\": {\"image\": \"$image\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
+                fi
+            done
         done
 
-        echo ::set-output name=exclude::$(echo "${excluded[@]}" | jq -s '.')
-        
+        # Add the Linux shell configurations
+        for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+            matrix+=("{\"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\", \"container\": \"\", \"shells\": \"true\"}")
+        done
+
+        # Add the non-Linux configurations
+        for os in $(echo "${windows_versions}" | jq -r '.[]'); do
+            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+                matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"\"}")
+            done
+        done
+        for os in $(echo "${macos_versions}" | jq -r '.[]'); do
+            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+                matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"\"}")
+            done
+        done
+
+        echo ::set-output name=matrix::$(echo "${matrix[@]}" | jq -s '.')
