--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -93,31 +93,32 @@ runs:
 
         # Start with the Linux containers
         for image in $(echo "${images}" | jq -r '.[]'); do
-            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-                major=$(echo $version | cut -d. -f1)
-                minor=$(echo $version | cut -d. -f2)
-                # Exclude Amazon Linux 1/2 with any version less than 13
-                if ! ( [ $major -eq 0 ] && [ $minor -lt 13 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
-                    # matrix+=("{\"container\": \"{\\\"image\\\": \\\"$image\\\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
-                fi
-            done
+          for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+            major=$(echo $version | cut -d. -f1)
+            minor=$(echo $version | cut -d. -f2)
+            # Exclude Amazon Linux 1/2 with any version less than 13
+            #if ! ( [ $major -eq 0 ] && [ $minor -lt 13 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
+              
+              # matrix+=("{\"container\": \"{\\\"image\\\": \\\"$image\\\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
+            #fi
+          done
         done
 
         # Add the Linux shell configurations
         for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-            matrix+=("{\"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\", \"shells\": \"true\", \"container\": \"{}\"}")
+          matrix+=("{\"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\", \"shells\": \"true\", \"container\": \"{}\"}")
         done
 
         # Add the non-Linux configurations
         for os in $(echo "${windows_versions}" | jq -r '.[]'); do
-            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-                matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"{}\"}")
-            done
+          for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+            matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"{}\"}")
+          done
         done
         for os in $(echo "${macos_versions}" | jq -r '.[]'); do
-            for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-                matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"{}\"}")
-            done
+          for version in $(echo "${tf_versions}" | jq -r '.[]'); do
+            matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"{}\"}")
+          done
         done
 
         _matrix=$(echo "${matrix[@]}" | jq -rs '.' )
