--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -97,10 +97,9 @@ runs:
             major=$(echo $version | cut -d. -f1)
             minor=$(echo $version | cut -d. -f2)
             # Exclude Amazon Linux 1/2 with any version less than 13
-            #if ! ( [ $major -eq 0 ] && [ $minor -lt 13 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
-              #image="{\"image\": \"$image\"}"
-              # matrix+=("{\"container\": \"{\\\"image\\\": \\\"$image\\\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
-            #fi
+            if ! ( [ $major -eq 0 ] && [ $minor -lt 13 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
+              matrix+=("{\"container\": {\"image\": \"$image\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
+            fi
           done
         done
 
